...
 Possible actions that can be called using the keypad
 */
enum KeypadAction: String {
    case openMenu
    case answer
    case backspace
    case clear
    case memoryClear
    case memoryAdd
    case memoryReduce
}

/**
...
}

/**
 Possible operations
 */
enum KeypadOperation: String {
    case plus
    case minus
    case multiply
    case divide
}

/**
...
