...
        ColorController.appendToList(key: ColorController.RowLabel, item: operationIcon)

        ColorController.appendToList(key: ColorController.RowLabel, item: displayArrowTop, handler: { return $0.withAlphaComponent(0.1) })
        ColorController.appendToList(key: ColorController.RowLabel, item: displayArrowBottom, handler: { return $0.withAlphaComponent(0.1) })
        
        if (!allowUserUnitChanging) {
            valueLabel.accessibilityIdentifier = "total_label"
            operationIconBackground.removeFromSuperview()
            operationIcon.removeFromSuperview()
            displayArrowTop.removeFromSuperview()
            displayArrowBottom.removeFromSuperview()
        } else {
            displayArrowTop.alpha = 0
...
