...
        rowsContainer.rightAnchor.constraint(equalTo: view.rightAnchor, constant: 0).isActive = true
        rowsContainer.topAnchor.constraint(equalTo: view.topAnchor, constant: 36).isActive = true
        
        rowsContainer.bringToLife()
        rowsContainer.addRow()
        
        rowsContainer.totalRow.accessibilityIdentifier = "total_row"
        
        let panGesture = UIPanGestureRecognizer(target: self, action: #selector(userDidPanKeypad(gesture:)))
        mainKeypad.isUserInteractionEnabled = true
        mainKeypad.addGestureRecognizer(panGesture)
        let secondaryPanGesture = UIPanGestureRecognizer(target: self, action: #selector(userDidPanKeypad(gesture:)))
        secondaryKeypad.isUserInteractionEnabled = true
...
